--- a/backend/src/main/resources/application-test.yml
+++ b/backend/src/main/resources/application-test.yml
@@ -34,8 +34,11 @@ springdoc:
 
 cloud:
   aws:
+    credentials:
+      access-key: ${S3_ACCESS_KEY}
+      secret-key: ${S3_SECRET_KEY}
     s3:
-      bucket: test-bucket
+      bucket: ${TEST_S3_BUCKET_NAME}
     region:
       static: ap-northeast-2
       auto: false
