feat: 구글 api를 활용해 장소 이미지 가져오기

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -55,3 +55,6 @@ map:
   tmap:
     app-key: ${TMAP_APP_KEY}
     default-url: https://apis.openapi.sk.com/tmap/routes
+  google:
+    api-key: ${GOOGLE_MAP_API_KEY}
+    default-url: https://places.googleapis.com/v1
