chore: 테스트 yml에 구글맵 변수 등록 및 사용하지 않는 의존성 제거

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -49,3 +49,6 @@ map:
   tmap:
     app-key: test-tmap-key
     default-url: https://apis.openapi.sk.com/tmap/routes
+  google:
+    api-key: test-google-key
+    default-url: https://places.googleapis.com/v1
