chore: 배포 스크립트에 구글맵 api key 시크릿 키 추가

--- a/.github/workflows/be-prod-ci_cd.yml
+++ b/.github/workflows/be-prod-ci_cd.yml
@@ -90,6 +90,7 @@ jobs:
           SERVER_URL=${{ secrets.SERVER_URL }}
           KAKAO_MAP_REST_API_KEY=${{ secrets.KAKAO_MAP_REST_API_KEY }}
           TMAP_APP_KEY=${{ secrets.TMAP_APP_KEY }}
+          GOOGLE_MAP_API_KEY=${{ secrets.GOOGLE_MAP_API_KEY }}
           
           # Docker Compose yml environments
           DOCKER_REPO_NAME=${{ secrets.DOCKER_REPO_NAME }}
