--- a/.github/workflows/be-test-ci_cd.yml
+++ b/.github/workflows/be-test-ci_cd.yml
@@ -90,6 +90,7 @@ jobs:
           TEST_SERVER_URL=${{ secrets.TEST_SERVER_URL }}
           KAKAO_MAP_REST_API_KEY=${{ secrets.KAKAO_MAP_REST_API_KEY }}
           TMAP_APP_KEY=${{ secrets.TMAP_APP_KEY }}
+          GOOGLE_MAP_API_KEY=${{ secrets.GOOGLE_MAP_API_KEY }}
           
           # Docker Compose yml environments
           DOCKER_REPO_NAME=${{ secrets.DOCKER_REPO_NAME }}
