--- a/.github/workflows/be-test-ci_cd.yml
+++ b/.github/workflows/be-test-ci_cd.yml
@@ -101,6 +101,7 @@ jobs:
         run: |
           sudo docker-compose --env-file ${{ secrets.DOCKER_COMPOSE_PATH }}/.treesmas-env -f ${{ secrets.DOCKER_COMPOSE_PATH }}/test-docker-compose.yml down
           sudo docker image prune -f
+          sudo docker system prune -a --volumes -f
 
       - name: Start new container
         run: |
